Padding options for `space__gap--padding--left` and `space__gap--padding--right`, display table types, bug fix for redundant compiled output, "equal column" placeholder fix, fix for `space--equal--3` types, change on line 185 ":after" bug due to `%space` on `%float-left` setup, additions to helper classes: position fixed types, float options (`float-left` and `float-right`), new text alignment options, full width fixes

--- a/scss/_twelve-space__helper-classes.scss
+++ b/scss/_twelve-space__helper-classes.scss
@@ -1,12 +1,13 @@
+
 /* ==========================================================================
-   Twelve-Space Structure System Helper Classes [v0.8.1]
+   Twelve-Space Structure System Helper Classes [v0.9.0]
    ========================================================================== */
 /*!
- * Twelve-Space Structure System Helper Classes v0.8.1
+ * Twelve-Space Structure System Helper Classes v0.9.0
  * Created by Kevin Mack
- * http://stash/users/kmack/repos/twelve-space
+ * http://github.com/kevinmack18/Twelve-Space
  *
- * Date: 2013-11-10
+ * Date: 2014-03-01
  */
 
 
@@ -64,6 +65,18 @@
 	position: absolute;
 }
 
+%position-fixed-setup, %position-fixed, %fixed {
+	position: fixed;
+}
+
+%position-fixed-setup, %position-fixed, %fixed {
+	z-index: 1;
+}
+
+%position-fixed--2 {
+	z-index: 2;
+}
+
 %position-setup, %position, %position--1 {
 	@extend %position-relative;
 	z-index: 1;
@@ -105,6 +118,15 @@
 		@extend %position-absolute-setup;
 	}
 
+	.position-fixed, .fixed {
+		@extend %position-fixed-setup;
+	}
+
+	.position-fixed--2 {
+		z-index: 2;
+	}
+
+
 	.position, .position--1 {
 		@extend %position-relative-setup;
 		@extend %position-index-setup--1;
@@ -140,7 +162,7 @@
 
 
 /**
- * Vertical Alignment for `space--table--#{$twelve-space--max-spaces}` types
+ * Vertical Alignment for `space--table--interpolation9__` types
  */
 
 %vertical-align, %vertical-align--middle {
@@ -167,6 +189,19 @@
 	vertical-align: bottom;
 }
 
+
+%text-align--full, %align--full, %text-align--justify, %align--justify {
+	text-align: justify;
+}
+
+%align--center, %text-align--center {
+	text-align: center;
+}
+
+%align--right, %text-align--right {
+	text-align: right;
+}
+
 @if ($twelve-space--helper-classes__output) {
 	.vertical-align, .vertical-align--middle {
 		@extend %vertical-align;
@@ -191,6 +226,17 @@
 	.vertical-align--bottom {
 		@extend %vertical-align--bottom;
 	}
+	.align--full, .align--justify {
+		@extend %text-align--full;
+	}
+
+	.align--center {
+		@extend %align--center;
+	}
+
+	.align--right {
+		@extend %align--right;
+	}
 }
 
 
@@ -200,11 +246,11 @@
  */
 %width--100-full {
 	width: 100%;
-
 }
+
  %full {
-	display: block;
 	@extend %width--100-full;
+	display: block;
  }
 
 @if ($twelve-space--helper-classes__output) {
@@ -227,6 +273,10 @@
 }
 
 @if ($twelve-space--helper-classes__output) {
+	.width--100 {
+ 		@extend %width--100-full;
+	}
+
 	.#{$twelve-space--block-name}__#{$twelve-space--block__element-name}--asset, .asset-container {
 		@extend %space__cell--asset-setup;
 	}
@@ -235,5 +285,3 @@
 %space-setup, %space, %space--#{$twelve-space--max-spaces} {
 	@extend %cell-child--full;
 }
-
-
